Fix link being invisible when focused

--- a/src/targets/meandall/styles/components/hotel-location.less
+++ b/src/targets/meandall/styles/components/hotel-location.less
@@ -1,3 +1,6 @@
-hotel-location contact-item div a:hover {
-  color: #000;
+hotel-location contact-item div {
+  a:hover,
+  a:focus {
+    color: #000;
+  }
 }
